<resources>
    <string name="app_name">빠밥</string>

    <!-- CONFIG  -->
    <string name="default_notification_channel_id">DEFAULT_CHANNEL</string>

    <!--  HOME  -->
    <string name="app_name_short">빠 밥!</string>
    <string name="app_name_full">오늘의 메뉴는?</string>
    <string name="create_room">방 생성하기</string>
    <string name="enter">참가하기</string>

    <!--  ENTER ROOM  -->
    <string name="enter_room">방 참가하기</string>
    <string name="enter_code">방 코드 입력</string>
    <string name="enter_code_description">코드 입력을 완료하시면 바로 투표에 참가됩니다!</string>
    <string name="place_holder_enter_code">방 코드 입력</string>
    <string name="button_enter">참가</string>

    <!--  CREATE ROOM  -->
    <string name="number_participants">참여 인원</string>
    <string name="create_room_description">투표에 참여할 인원을 입력해주세요!</string>
    <string name="button_create_room">방 만들기</string>
    <string name="placeholder_number_participants">입력</string>

    <!--  CREATE ROOM COMPLETE  -->
    <string name="complete_enter_code">방 참여 코드</string>
    <string name="create_room_complete_description">방 참여 코드를 친구들에게 공유하세요~!!!</string>
    <string name="start_button_description">투표 시작 후에도 참여 코드 확인이 가능해요</string>
    <string name="start_vote">투표 시작하기</string>
    <string name="number_participants_unit">명</string>

    <!--  VOTE RESULT  -->
    <string name="vote_complete_header">오늘의 메뉴는?</string>
    <string name="vote_complete">투표 완료!</string>


    <!--  SELECT  -->
    <string name="select_korean">한식</string>
    <string name="select_western">한식</string>
    <string name="select_chinese">중식</string>
    <string name="select_japanese">일식</string>
    <string name="select_spicy">매운 음식</string>
    <string name="select_not_spicy">안 매운 음식</string>
    <string name="select_soup">국물 음식</string>
    <string name="select_not_soup">국물이 없는 음식</string>
    <string name="select_hot">뜨거운 음식</string>
    <string name="select_cold">차가운 음식</string>
    <string name="ok">알겠어요!</string>
    <string name="notification_description">투표가 종료되면 알림을 보내드릴게요</string>
    <string name="wait_description">아직 투표하지 않은 사람이 있어요</string>
    <string name="complete">완료</string>
    <string name="code">참여 코드</string>
    <string name="vote_early_close">투표 조기 종료</string>

    <!--  DIALOG  -->
    <string name="dialog_code_description">방 참여 코드를 친구들에게 공유하세요!</string>
    <string name="dialog_early_close_description">정말 투표를 종료하실건가요?</string>
    <string name="cancel">취소</string>
    <string name="dialog_early_close">조기 종료</string>
    <string name="dialog_exit_title">투표 나가기</string>
    <string name="dialog_exit_description">지금 나가면 투표 정보가 모두 사라져요</string>
    <string name="exit">나가기</string>
    <string name="dialog_continue">계속하기</string>

</resources>